use correct way to set font size in latex template

--- a/src/resources/latex/template.tex
+++ b/src/resources/latex/template.tex
@@ -1,4 +1,4 @@
-\documentclass[14pt, paper=a4]{scrartcl}
+\documentclass[fontsize=14pt, paper=a4]{scrartcl}
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
